# autoware.universe

common/fake_test_node/: package.xml
common/goal_distance_calculator/: package.xml
common/grid_map_utils/: CMakeLists.txt  package.xml
common/osqp_interface/: package.xml
common/path_distance_calculator/: package.xml
common/tier4_api_utils/: package.xml
common/tier4_autoware_utils/: README.md  package.xml
common/tier4_control_rviz_plugin/: CMakeLists.txt  package.xml
common/tier4_datetime_rviz_plugin/: package.xml
common/tier4_debug_tools/: package.xml
common/tier4_localization_rviz_plugin/: package.xml
common/tier4_planning_rviz_plugin/: package.xml
common/tier4_simulated_clock_rviz_plugin/: package.xml
common/tier4_state_rviz_plugin/: package.xml
common/vehicle_constants_manager/: package.xml
control/control_performance_analysis/: package.xml
control/engage_transition_manager/: CMakeLists.txt
control/external_cmd_selector/: package.xml
control/joy_controller/: package.xml
control/lane_departure_checker/: package.xml
control/obstacle_collision_checker/: package.xml
control/pure_pursuit/: package.xml
control/shift_decider/: package.xml
control/simple_trajectory_follower/: package.xml
control/simple_trajectory_follower/scripts/: simple_trajctory_follower.py
control/simple_trajectory_follower/src/: simple_trajectory_follower.cpp
control/trajectory_follower/: package.xml
control/trajectory_follower_nodes/: CMakeLists.txt  package.xml
control/vehicle_cmd_gate/: CMakeLists.txt  package.xml
localization/ekf_localizer/: package.xml
localization/gyro_odometer/: package.xml
localization/initial_pose_button_panel/: package.xml
localization/localization_error_monitor/: package.xml
localization/ndt_scan_matcher/: package.xml
localization/pose2twist/: package.xml
localization/pose_initializer/: package.xml
localization/stop_filter/: package.xml
localization/vehicle_velocity_converter/: package.xml
map/lanelet2_extension/: package.xml
map/map_loader/: package.xml
map/map_tf_generator/: package.xml
perception/compare_map_segmentation/: package.xml
perception/detected_object_feature_remover/: package.xml
perception/detection_by_tracker/: package.xml
perception/elevation_map_loader/: package.xml
perception/euclidean_cluster/: package.xml
perception/ground_segmentation/: package.xml
perception/lidar_apollo_instance_segmentation/: package.xml
perception/lidar_centerpoint/: package.xml
perception/map_based_prediction/: package.xml
perception/multi_object_tracker/: package.xml
perception/object_merger/: package.xml
perception/object_range_splitter/: package.xml
perception/occupancy_grid_map_outlier_filter/: package.xml
perception/roi_cluster_fusion/: package.xml
perception/shape_estimation/: package.xml
perception/tensorrt_yolo/: package.xml
perception/traffic_light_classifier/: package.xml
perception/traffic_light_map_based_detector/: package.xml
perception/traffic_light_ssd_fine_detector/: package.xml
perception/traffic_light_visualization/: package.xml
planning/apparent_safe_velocity_limiter/: package.xml
planning/behavior_path_planner/: CMakeLists.txt  package.xml
planning/behavior_path_planner/config/: plot_julgger_lane_change.xml
planning/behavior_path_planner/include/behavior_path_planner/: behavior_path_planner_node.hpp  behavior_tree_manager.hpp  utilities.hpp
planning/behavior_path_planner/include/behavior_path_planner/scene_module/: approval_handler.hpp  scene_module_interface.hpp
planning/behavior_path_planner/include/behavior_path_planner/scene_module/avoidance/: avoidance_module.hpp  avoidance_utils.hpp
planning/behavior_path_planner/include/behavior_path_planner/scene_module/lane_change/: lane_change_module.hpp
planning/behavior_path_planner/include/behavior_path_planner/scene_module/lane_following/: lane_following_module.hpp
planning/behavior_path_planner/include/behavior_path_planner/scene_module/pull_out/: pull_out_module.hpp
planning/behavior_path_planner/include/behavior_path_planner/scene_module/pull_over/: pull_over_module.hpp
planning/behavior_path_planner/include/behavior_path_planner/scene_module/side_shift/: side_shift_module.hpp
planning/behavior_path_planner/src/: behavior_path_planner_node.cpp  behavior_tree_manager.cpp  utilities.cpp
planning/behavior_path_planner/src/parallel_parking_planner/: parallel_parking_planner.cpp
planning/behavior_path_planner/src/scene_module/avoidance/: avoidance_module.cpp  avoidance_utils.cpp
planning/behavior_path_planner/src/scene_module/lane_change/: lane_change_module.cpp
planning/behavior_path_planner/src/scene_module/lane_following/: lane_following_module.cpp
planning/behavior_path_planner/src/scene_module/pull_over/: pull_over_module.cpp  util.cpp
planning/behavior_path_planner/src/scene_module/side_shift/: side_shift_module.cpp
planning/behavior_velocity_planner/: CMakeLists.txt  package.xml
planning/costmap_generator/: package.xml
planning/external_velocity_limit_selector/: package.xml
planning/freespace_planner/: package.xml
planning/mission_planner/: package.xml
planning/motion_velocity_smoother/: package.xml
planning/obstacle_avoidance_planner/: package.xml
planning/obstacle_cruise_planner/: CMakeLists.txt
planning/obstacle_cruise_planner/config/: plot_juggler_cruise_obstacle_extractor.xml
planning/obstacle_cruise_planner/include/obstacle_cruise_planner/: cruise_object_extractor.hpp
planning/obstacle_cruise_planner/src/: cruise_object_extractor.cpp  node.cpp
planning/obstacle_cruise_planner/src/optimization_based_planner/: optimization_based_planner.cpp
planning/obstacle_stop_planner/: package.xml
planning/obstacle_velocity_planner/: package.xml
planning/planning_error_monitor/: package.xml
planning/planning_evaluator/: package.xml
planning/route_handler/: package.xml
planning/scenario_selector/: package.xml
planning/surround_obstacle_checker/: package.xml
sensing/geo_pos_conv/: package.xml
sensing/image_transport_decompressor/: package.xml
(+443 files in other folders)
