<?xml version="1.0"?>
<package format="2">
  <name>simple_trajectory_follower</name>
  <version>0.1.0</version>
  <description>The simple_trajectory_follower package</description>
  <maintainer email="horibe.takamasa@gmail.com">Takamasa Horibe</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>autoware_auto_control_msgs</depend>
  <depend>autoware_auto_system_msgs</depend>
  <depend>autoware_auto_vehicle_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_srvs</depend>
  <depend>tier4_api_utils</depend>
  <depend>tier4_control_msgs</depend>
  <depend>tier4_debug_msgs</depend>
  <depend>tier4_external_api_msgs</depend>
  <depend>tier4_system_msgs</depend>
  <depend>tier4_vehicle_msgs</depend>
  <depend>vehicle_info_util</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
